@@ -320,8 +320,17 @@ function print_family_descendancy(&$person, &$family, $depth) {
 		// children
 		$children = $family->getChildren();
 		print "<tr><td colspan=\"3\" class=\"details1\" >&nbsp;&nbsp;";
-		if (count($children)<1) print $pgv_lang["no_children"];
-		else print $factarray["NCHI"].": ".count($children);
+		if ($children) {
+			print $factarray["NCHI"].": ".count($children);
+		} else {
+			// Distinguish between no children (NCHI 0) and no recorded
+			// children (no CHIL records)
+			if (strpos($family->getGedcomRecord(), "\n1 NCHI 0")) {
+				print $factarray["NCHI"].": ".count($children);
+			} else {
+				print $pgv_lang["no_children"];
+			}
+		}
 		print "</td></tr></table>";
 		print "</li>\r\n";
 		if ($depth>0) foreach ($children as $child) {
